<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Encabezado -->
    <LinearLayout
        android:id="@+id/encabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#B47FFF"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="3"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/nombre_alumno"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/registro_alumno"
                android:gravity="center"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/grupo_alumno"
                android:gravity="end"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:text="Encuesta de trabajo" />
    </LinearLayout>


    <ScrollView android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/encabezado"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp" >

            <TextView
                android:id="@+id/lblNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblNombre"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@id/cpNombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText android:id="@+id/cpNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/lblNombre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/lblCorreo"/>

            <TextView
                android:id="@+id/lblCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblCorreo"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@id/cpCorreo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cpNombre" />

            <EditText android:id="@+id/cpCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/lblCorreo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/lblTelefono"/>

            <TextView
                android:id="@+id/lblTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTelefono"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@id/cpTelefono"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cpCorreo" />

            <EditText android:id="@+id/cpTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="phone"
                app:layout_constraintTop_toBottomOf="@+id/lblTelefono"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/lblPuesto"/>

            <TextView
                android:id="@+id/lblPuesto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblPuesto"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@id/cpPuesto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cpTelefono" />

            <AutoCompleteTextView
                android:id="@+id/cpPuesto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/lblPuesto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/lblExp" />

            <TextView
                android:id="@+id/lblExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblExp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@id/cpExp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cpPuesto" />

            <RadioGroup android:id="@+id/cpExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/lblExp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/lblEducacion">

                <RadioButton
                    android:id="@+id/radioOptionSi"
                    android:textAlignment="center"
                    android:layout_marginRight="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Si" />

                <RadioButton
                    android:id="@+id/radioOptionNo"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No" />
            </RadioGroup>


            <TextView
                android:id="@+id/lblEducacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblEducacion"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toTopOf="@id/cpEducacion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cpExp" />

            <Spinner
                android:id="@+id/cpEducacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/lblEducacion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/lblHabilidades"/>

            <TextView
                android:id="@+id/lblHabilidades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblHabilidades"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@id/cpHabilidades"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cpEducacion" />

            <EditText android:id="@+id/cpHabilidades"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:inputType="textMultiLine"
                android:gravity="top|start"
                android:lines="5"
                android:scrollbars="vertical"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/lblHabilidades"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/lblDisponibilidad"/>

            <TextView
                android:id="@+id/lblDisponibilidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblDisponibilidad"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@id/cpDisponibilidad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cpHabilidades" />

            <EditText android:id="@+id/cpDisponibilidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/lblDisponibilidad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/cpRestriccion"/>

            <LinearLayout
                android:id="@+id/cpRestriccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toBottomOf="@id/cpDisponibilidad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ToggleButton
                    android:id="@+id/toggleNotifi"
                    android:textOn="Recibir notificacion"
                    android:textOff="No recibir notificacion"
                    android:textSize="12sp"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnEnviar"
                    android:text="Enviar"
                    android:textSize="12sp"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>